# hytools

./: .gitignore  .prompt.md  .task_complete  AGENTS.md  BATCH_8_SUMMARY.md  DEVELOPMENT.md  README.md  __init__.py  _patch_backfill.py  baseline_metrics.py  config.json  install.ps1  install.sh  pyproject.toml  run_bdc_test.py  run_tests_with_docker.ps1  run_tests_with_docker.sh  script.py  setup.py  temp_analyze.py  temp_check_db.py  temp_fix_lang_filter.py  temp_migrate_language_filter.py  temp_score_test.py  temp_test.py  temp_test2.py  temp_test3.py  temp_token_pages.ps1  temp_wa_analysis.py  test_import.py
.cursor/rules/: western-armenian-transliteration.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  extraction.yml  scraping.yml
07-tools/: annotate_anki_with_frequency.py  investigate_wa_docs.py  preview_top_vocab.py
analysis/: wa_ea_corpus_manifest.json  wa_ea_orthography_rules.yaml  wa_ea_source_manifest.json
analysis/benchmarks/: README.md
analysis/wa_ea_pipeline/: wa_ea_analysis.ipynb  wa_ea_pipeline_summary.json
armenian_corpus_core/: __init__.py  data_sources.py
armenian_corpus_core/anki/: config.py  pull_pipeline.py
armenian_corpus_core/cleaning/: __init__.py  author_database.py  language_filter.py  normalizer.py  runner.py
armenian_corpus_core/core_contracts/: types.py
armenian_corpus_core/database/: card_database.py  corpus_schema.py  migrator.py  mongodb_client.py
armenian_corpus_core/extraction/: __init__.py  export_core_contracts_jsonl.py  ingest_wa_fingerprints_to_contracts.py  mappers.py  merge_document_records_with_profiles.py  registry.py  run_extraction_pipeline.py
armenian_corpus_core/linguistics/: __init__.py  stemmer.py
armenian_corpus_core/scraping/: __init__.py  _wa_filter.py  archive_org.py  culturax.py  eastern_armenian.py  english_sources.py  frequency_aggregator.py  hathitrust.py  loc.py  metadata.py  mss_nkr.py  nayiri.py  newspaper.py  rss_news.py  runner.py  wikipedia.py  wikisource.py
augmentation/: __init__.py  baseline_statistics.py  batch_worker.py  benchmark_dialect_distance.py  calibrate_distance_weights.py  drift_detection.py  llm_client.py  metrics_pipeline.py  metrics_visualization.py  runner.py  safe_generation.py  strategies.py
cache/metric_cards/: aug_001_paraphrase_metrics.json  augmented_anomaly_test_metrics.json  augmented_baseline_metrics.json  augmented_paraphrase_metrics.json  augmented_test_metrics.json
cleaning/: __init__.py  language_filter.py  normalizer.py  run_mongodb.py
config/: settings.example.yaml  settings.yaml
core_contracts/: __init__.py  types.py
data/: monosyllabic_roots.json
data/logs/: loc_api_errors.jsonl  pipeline_summary.json
data/textbook_ocr_thresholds_run/: reprocess_threshold_summary.json
docs/: DIALECT_AUDIT.md  INDEX.md  INTERVIEW_PREP_EIGHT_SLEEP_DATA_SCIENTIST.md  INTERVIEW_REFRESHER_EIGHT_SLEEP.md  LOCAL_SCHEDULER.md  MIGRATION_SUMMARY.md  NAYIRI_DOCUMENTATION.md  PHASE1_INTEGRATION_GUIDE.md  PHONETICS_AUDIT_SUMMARY.md  QUICK_START_PHASE1.md  SCRAPER_SCHEMA_STANDARDIZATION_PLAN.md  SKILL_MINING.md  WA_WEB_CRAWLER_IMPLEMENTATION_PLAN.md  YOUR_QUESTION_ANSWERED.md  adapter_layer_plan.md  agent-command-rules.md  data_pipeline.md  hytools_always_on_data_pipeline.md  trocr_install.md
docs/archive/: MOVED_FROM_WA_LLM.md  OCR_DPI_AND_RESOLUTION.md
docs/armenian_language_guids/: ARMENIAN_QUICK_REFERENCE.md  ARMENIAN_REGEX_REFERENCE.md  ARMENIAN_TRANSLITERATION_SYSTEMS.md  CLASSICAL_ARMENIAN_IDENTIFICATION.md  G2P.md  MORPHOLOGICAL_SUFFIX_AND_PREFIX_TRACKING.md  NFC_AND_LIGATURE_DECOMPOSITION.md  PRONUNCIATION_RULES_MINED.md  STEM_CATALOG_DESIGN.md  TEST_VALIDATION_ARMENIAN.md  TEXTBOOK_MODERN_WESTERN_ARMENIAN_GRAMMAR.md  V_VS_U_PASSIVE_VERB_RESEARCH.md  WA_EA_LINGUISTIC_DISTINCTIONS.md  WA_EA_QUANTITATIVE_DISTANCE.md  WESTERN_ARMENIAN_KEYBOARD_ANDROID_RESEARCH.md  WESTERN_ARMENIAN_LANGUAGE_CONSOLIDATED.md  phonetics_rule_gaps.md  (+2 more)
extraction/: registry.py
hytool/: __init__.py  _alias.py
hytools/: __init__.py
ingestion/: __init__.py  research_runner.py  runner.py
integrations/: __init__.py
linguistics/: __init__.py  stemmer.py
notebooks/: mongodb_eda.ipynb  syllable_counter_demo.ipynb  transliteration_demo.ipynb
ocr/: __init__.py  pipeline.py  postprocessor.py  preprocessor.py  tesseract_config.py  textbook_modern_wa.py
scripts/: build_wa_textbook_dictionary.py  check_ia_item.py  compute_distances.py  diagnose_page_ocr.py  external_db.py  fetch_asjp.py  fetch_hf_datasets.py  fetch_phoible.py  generate_tert_nla_urls.py  helpers_ratchet.py  import_benchmarks.py  load_external_sources.py  migrate_imports_to_hytools.py  migrate_rules_to_branch.py  prepare_wa_retrieval_index.py  query_wa_rag.py  reprocess_textbook_ocr.py  run_data_pipeline.py  run_hamazkayin_one_off.py  run_pipeline.py  run_tert_and_ocr.py  sample_manifest.json  set_mongo_env.ps1  tert_nla_url_status.json  tune_wa_scoring.py  wa_ea_distance.py  wa_ea_pairwise_runner.py  wa_ea_pipeline.py
tests/: test_archive_discovery.py  test_armenian_tokenizer.py  test_augmentation_validation.py  test_author_extraction.py  test_author_research.py  test_baseline_statistics.py  test_book_inventory.py  test_book_inventory_paths.py  test_catalog_backfill.py  test_config_settings.py  test_corpus_vocabulary_filter.py  test_coverage_analysis.py  test_data_pipeline.py  test_database_pipeline.py  test_dedup.py  test_dialect_distance.py  test_dialect_pair_metrics.py  test_digital_library_scrapers.py  test_doctor_and_corpus_export.py  test_dpla_normalize.py  test_drift_detection.py  test_eastern_armenian_news.py  test_frequency_aggregator.py  test_hashing.py  test_ingestion_drift_detection.py  test_ingestion_runner_contract.py  test_integration.py  test_integration_aggregation.py  test_language_helpers.py  test_loanword_tracker.py  test_mappers.py  test_metadata_tagging.py  test_metrics_pipeline.py  test_metrics_visualization.py  test_mongodb_client.py  test_mongodb_client_dedup.py  test_mongodb_reporting_storage.py  test_morphology.py  test_nayiri_integration.py  test_nayiri_parsing.py  (+26 more)
(+309 files in other folders)
